--- a/packages/euler/package.json
+++ b/packages/euler/package.json
@@ -7,7 +7,8 @@
     "build": "vue-tsc --noEmit && vite build"
   },
   "dependencies": {
+    "@better-scroll/core": "^2.5.0",
+    "@better-scroll/slide": "^2.5.0",
     "shared": "workspace:^"
-  },
-  "devDependencies": {}
+  }
 }
