--- a/deploy/gauss/Dockerfile
+++ b/deploy/gauss/Dockerfile
@@ -2,7 +2,7 @@ FROM gplane/pnpm as Builder
 
 RUN mkdir -p /home/happy-new-year/web
 WORKDIR /home/happy-new-year/web
-COPY . /home/happy-new-year/web
+COPY ../../ /home/happy-new-year/web
 
 RUN pnpm install
 
