--- a/deploy/euler/nginx.conf
+++ b/deploy/euler/nginx.conf
@@ -83,8 +83,11 @@ http {
       location = /en/ {
         rewrite ^/en/$ /en/2022/ redirect;
       }
-      location /query/ {
+      location /zh/query/ {
         proxy_pass https://omapi.osinfra.cn/query/;
+      }
+      location /zh/oauth2/ {
+        proxy_pass /oauth2/;
       }
 
       root /usr/share/nginx/html;
