--- a/deploy/euler/nginx.conf
+++ b/deploy/euler/nginx.conf
@@ -84,7 +84,7 @@ http {
         rewrite ^/en/$ /en/2022/ redirect;
       }
       location /zh/query/ {
-        proxy_pass https://omapi.osinfra.cn/query/;
+        proxy_pass https://omapi.test.osinfra.cn/query/;
       }
 
       root /usr/share/nginx/html;
