--- a/deploy/euler/nginx.conf
+++ b/deploy/euler/nginx.conf
@@ -83,7 +83,7 @@ http {
       location = /en/ {
         rewrite ^/en/$ /en/2022/ redirect;
       }
-      location /zh/query/ {
+      location /query/ {
         proxy_pass https://omapi.test.osinfra.cn/query/;
       }
 
