--- a/deploy/euler/nginx.conf
+++ b/deploy/euler/nginx.conf
@@ -73,16 +73,16 @@ http {
         add_header Cache-Control no-cache;
       }
 
-      location = / {
-        rewrite ^/$ /zh/2022/ redirect;
-      }
-      location = /zh/ {
-        rewrite ^/zh/$ /zh/2022/ redirect;
-      }
+      # location = / {
+      #   rewrite ^/$ /zh/2022/ redirect;
+      # }
+      # location = /zh/ {
+      #   rewrite ^/zh/$ /zh/2022/ redirect;
+      # }
 
-      location = /en/ {
-        rewrite ^/en/$ /en/2022/ redirect;
-      }
+      # location = /en/ {
+      #   rewrite ^/en/$ /en/2022/ redirect;
+      # }
       location /query/ {
         proxy_pass https://omapi.test.osinfra.cn/query/;
       }
