--- a/deploy/euler/nginx.conf
+++ b/deploy/euler/nginx.conf
@@ -84,7 +84,7 @@ http {
       #   rewrite ^/en/$ /en/2022/ redirect;
       # }
       location /query/ {
-        proxy_pass https://omapi.test.osinfra.cn/query/;
+        rewrite ^/query/(.*) https://omapi.test.osinfra.cn/query/$1 redirect;
       }
 
       root /usr/share/nginx/html;
