--- a/deploy/mindspore/nginx.conf
+++ b/deploy/mindspore/nginx.conf
@@ -73,6 +73,10 @@ http {
         add_header Cache-Control no-cache;
       }
 
+      location /query/ {
+        rewrite ^/query/(.*) https://omapi.test.osinfra.cn/query/$1 redirect;
+      }
+
       root /usr/share/nginx/html;
       index /index.html;
       proxy_set_header Host $host;
