--- a/deploy/gauss/nginx.conf
+++ b/deploy/gauss/nginx.conf
@@ -72,19 +72,8 @@ http {
       location / {
         add_header Cache-Control no-cache;
       }
-      location = / {
-        rewrite ^/$ /zh/2022/ redirect;
-      }
-      location = /zh/ {
-        rewrite ^/zh/$ /zh/2022/ redirect;
-      }
-
-      location = /en/ {
-        rewrite ^/en/$ /en/2022/ redirect;
-      }
-
       location /query/ {
-        proxy_pass https://omapi.osinfra.cn/query/;
+        rewrite ^/query/(.*) https://omapi.test.osinfra.cn/query/$1 redirect;
       }
 
       root /usr/share/nginx/html;
