fix：lookeng fix

--- a/deploy/lookeng/nginx.conf
+++ b/deploy/lookeng/nginx.conf
@@ -73,7 +73,7 @@ http {
         add_header Cache-Control no-cache;
       }
       location /query/ {
-        rewrite ^/query/(.*) https://omapi.test.osinfra.cn/query/$1 redirect;
+        rewrite ^/query/(.*) https://omapi.osinfra.cn/query/$1 redirect;
       }
 
       root /usr/share/nginx/html;
