--- a/deploy/euler/nginx.conf
+++ b/deploy/euler/nginx.conf
@@ -74,7 +74,7 @@ http {
       }
 
       location /query/ {
-        rewrite ^/query/(.*) https://omapi.test.osinfra.cn/query/$1 redirect;
+        rewrite ^/query/(.*) https://omapi.osinfra.cn/query/$1 redirect;
       }
 
       root /usr/share/nginx/html;
