--- a/deploy/lookeng/nginx.conf
+++ b/deploy/lookeng/nginx.conf
@@ -75,6 +75,9 @@ http {
       location /query/ {
         rewrite ^/query/(.*) https://omapi.osinfra.cn/query/$1 redirect;
       }
+      location /ip-api/ {
+        proxy_pass http://ip-api.com/json/;
+      }
 
       root /usr/share/nginx/html;
       index /index.html;
