--- a/deploy/mindspore/nginx.conf
+++ b/deploy/mindspore/nginx.conf
@@ -76,6 +76,9 @@ http {
       location /query/ {
         rewrite ^/query/(.*) https://omapi.test.osinfra.cn/query/$1 redirect;
       }
+      location /ip-api/ {
+        proxy_pass http://ip-api.com/json/;
+      }
 
       root /usr/share/nginx/html;
       index /index.html;
