--- a/deploy/gauss/nginx.conf
+++ b/deploy/gauss/nginx.conf
@@ -72,6 +72,9 @@ http {
       location / {
         add_header Cache-Control no-cache;
       }
+      location /ip-api/ {
+        proxy_pass http://ip-api.com/json/;
+      }
       location /query/ {
         rewrite ^/query/(.*) https://omapi.osinfra.cn/query/$1 redirect;
       }
