--- a/deploy/euler/nginx.conf
+++ b/deploy/euler/nginx.conf
@@ -133,7 +133,7 @@ http {
       add_header Expires 0;
       add_header Referrer-Policy "no-referrer";
 
-      proxy_pass https://dsapi.osinfra.cn/query/$1 redirect;
+      proxy_pass https://dsapi.osinfra.cn/query/;
     }
 
 
