--- a/deploy/mindspore/nginx.conf
+++ b/deploy/mindspore/nginx.conf
@@ -53,7 +53,7 @@ http {
   gzip_vary on;
 
   server {
-    listen 8080 ssl default_server;
+    listen 8080;
     server_name summary-openeuler.test.osinfra.cn;
     charset utf-8;
 
