--- a/deploy/mindspore/nginx.conf
+++ b/deploy/mindspore/nginx.conf
@@ -74,7 +74,6 @@ http {
     if ($request_method = 'OPTIONS') {
       return 401;
     }
-    
 
     if ($request_method !~ ^(GET|HEAD|POST)$) {
       return 444;
@@ -117,6 +116,11 @@ http {
       add_header Referrer-Policy "no-referrer";
 
       proxy_pass https://dsapi.osinfra.cn/query/;
+    }
+
+    location /en/2023/ {
+      root /usr/share/nginx/www;
+      index index.html;
     }
 
 
