--- a/deploy/euler/nginx.conf
+++ b/deploy/euler/nginx.conf
@@ -117,6 +117,31 @@ http {
       proxy_pass https://dsapi.osinfra.cn/query/;
     }
 
+    location /query/ {
+      proxy_set_header X-Forwarded-For $http_x_real_ip;
+      add_header X-XSS-Protection "1; mode=block";
+      add_header X-Frame-Options DENY;
+      add_header X-Content-Type-Options nosniff;
+      add_header Content-Security-Policy "script-src 'self'; object-src 'none'; frame-src 'none'";
+      add_header Cache-Control "no-cache,no-store,must-revalidate";
+      add_header Pragma no-cache;
+      add_header Expires 0;
+      add_header Referrer-Policy "no-referrer";
+
+      proxy_pass https://dsapi.osinfra.cn/query/;
+    }
+
+    location /zh/2023/ {
+      root /usr/share/nginx/www;
+      index index.html;
+    }
+
+    location /en/2023/ {
+      root /usr/share/nginx/www;
+      index index.html;
+    }
+
+
 
     error_page 401 402 403 405 406 407 413 414 /error.html;
     error_page 404 /404.html;
