--- a/deploy/gauss/nginx.conf
+++ b/deploy/gauss/nginx.conf
@@ -118,6 +118,11 @@ http {
       proxy_pass https://dsapi.osinfra.cn/query/;
     }
 
+    location /zh/2023/ {
+      root /usr/share/nginx/www;
+      index index.html;
+    }
+
 
     error_page 401 402 403 405 406 407 413 414 /error.html;
     error_page 404 /404.html;
