--- a/deploy/mindspore/nginx.conf
+++ b/deploy/mindspore/nginx.conf
@@ -118,7 +118,7 @@ http {
       proxy_pass https://dsapi.osinfra.cn/query/;
     }
 
-    location /en/2023/ {
+    location /zh/2023/ {
       root /usr/share/nginx/www;
       index index.html;
     }
