--- a/deploy/euler/nginx.conf
+++ b/deploy/euler/nginx.conf
@@ -84,6 +84,9 @@ http {
     }
 
     location / {
+      rewrite ^/zh/2023/agreement_ch.html                      /agreement_ch.html                            permanent;
+      rewrite ^/en/2023/agreement_ch.html                      /agreement_en.html                            permanent;
+
       limit_req zone=ratelimit burst=5 nodelay;
       proxy_set_header X-Forwarded-For $http_x_real_ip;
       proxy_set_header Host $host;
@@ -97,6 +100,10 @@ http {
         add_header Content-Security-Policy "script-src 'self' 'unsafe-inline' 'unsafe-eval' ; object-src 'none'; frame-src 'none'";
         add_header Cache-Control "public,max-age=1209600";
         add_header Referrer-Policy "no-referrer";
+      }
+
+      location / {
+        try_files $uri /index.html;
       }
 
       root /usr/share/nginx/www;
@@ -116,17 +123,6 @@ http {
 
       proxy_pass https://dsapi.osinfra.cn/query/;
     }
-
-    location /zh/2023/ {
-      root /usr/share/nginx/www;
-      index index.html;
-    }
-
-    location /en/2023/ {
-      root /usr/share/nginx/www;
-      index index.html;
-    }
-
 
 
     error_page 401 402 403 405 406 407 413 414 /error.html;
