--- a/deploy/gauss/nginx.conf
+++ b/deploy/gauss/nginx.conf
@@ -54,7 +54,7 @@ http {
 
   server {
     listen 8080;
-    server_name summary-openeuler.test.osinfra.cn;
+    server_name summary-opengauss.test.osinfra.cn;
     charset utf-8;
 
 
@@ -85,6 +85,8 @@ http {
     }
 
     location / {
+      rewrite ^/zh/2023/agreement_ch.html                      /agreement_ch.html                            permanent;
+
       limit_req zone=ratelimit burst=5 nodelay;
       proxy_set_header X-Forwarded-For $http_x_real_ip;
       proxy_set_header Host $host;
@@ -98,6 +100,10 @@ http {
         add_header Content-Security-Policy "script-src 'self' 'unsafe-inline' 'unsafe-eval' ; object-src 'none'; frame-src 'none'";
         add_header Cache-Control "public,max-age=1209600";
         add_header Referrer-Policy "no-referrer";
+      }
+
+      location / {
+        try_files $uri /index.html;
       }
 
       root /usr/share/nginx/www;
@@ -117,12 +123,6 @@ http {
 
       proxy_pass https://dsapi.osinfra.cn/query/;
     }
-
-    location /zh/2023/ {
-      root /usr/share/nginx/www;
-      index index.html;
-    }
-
 
     error_page 401 402 403 405 406 407 413 414 /error.html;
     error_page 404 /404.html;
