--- a/deploy/gauss/nginx.conf
+++ b/deploy/gauss/nginx.conf
@@ -102,6 +102,7 @@ http {
 
       root /usr/share/nginx/www;
       index index.html;
+      try_files $uri /index.html
     }
 
     location /query/ {
@@ -117,12 +118,6 @@ http {
 
       proxy_pass https://dsapi.osinfra.cn/query/;
     }
-
-    location /zh/2023/ {
-      root /usr/share/nginx/www;
-      index index.html;
-    }
-
 
     error_page 401 402 403 405 406 407 413 414 /error.html;
     error_page 404 /404.html;
