--- a/deploy/mindspore/nginx.conf
+++ b/deploy/mindspore/nginx.conf
@@ -102,6 +102,7 @@ http {
 
       root /usr/share/nginx/www;
       index index.html;
+      try_files $uri /index.html
     }
 
     location /query/ {
@@ -116,11 +117,6 @@ http {
       add_header Referrer-Policy "no-referrer";
 
       proxy_pass https://dsapi.osinfra.cn/query/;
-    }
-
-    location /zh/2023/ {
-      root /usr/share/nginx/www;
-      index index.html;
     }
 
 
