--- a/deploy/euler/nginx.conf
+++ b/deploy/euler/nginx.conf
@@ -101,6 +101,7 @@ http {
 
       root /usr/share/nginx/www;
       index index.html;
+      try_files $uri /index.html
     }
 
     location /query/ {
@@ -116,17 +117,6 @@ http {
 
       proxy_pass https://dsapi.osinfra.cn/query/;
     }
-
-    location /zh/2023/ {
-      root /usr/share/nginx/www;
-      index index.html;
-    }
-
-    location /en/2023/ {
-      root /usr/share/nginx/www;
-      index index.html;
-    }
-
 
 
     error_page 401 402 403 405 406 407 413 414 /error.html;
