--- a/deploy/euler/nginx.conf
+++ b/deploy/euler/nginx.conf
@@ -99,9 +99,12 @@ http {
         add_header Referrer-Policy "no-referrer";
       }
 
+      location / {
+        try_files $uri /index.html;
+      }
+
       root /usr/share/nginx/www;
       index index.html;
-      try_files $uri /index.html
     }
 
     location /query/ {
