--- a/deploy/euler/nginx.conf
+++ b/deploy/euler/nginx.conf
@@ -84,6 +84,9 @@ http {
     }
 
     location / {
+      rewrite ^/zh/2023/agreement_ch.html                      /agreement_ch.html                            permanent;
+      rewrite ^/en/2023/agreement_ch.html                      /agreement_en.html                            permanent;
+
       limit_req zone=ratelimit burst=5 nodelay;
       proxy_set_header X-Forwarded-For $http_x_real_ip;
       proxy_set_header Host $host;
