--- a/packages/gauss/package.json
+++ b/packages/gauss/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@better-scroll/core": "^2.5.0",
     "@better-scroll/slide": "^2.5.0",
+    "@better-scroll/mouse-wheel": "^2.5.1",
     "shared": "workspace:^"
   }
 }
