fix: 社区数据更新

--- a/deploy/euler/nginx.conf
+++ b/deploy/euler/nginx.conf
@@ -54,7 +54,7 @@ http {
 
   server {
     listen 8080;
-    server_name summary-openeuler.test.osinfra.cn;
+    server_name summary.openeuler.org;
     charset utf-8;
 
 
