--- a/deploy/gauss/nginx.conf
+++ b/deploy/gauss/nginx.conf
@@ -54,7 +54,7 @@ http {
 
   server {
     listen 8080;
-    server_name summary-opengauss.test.osinfra.cn;
+    server_name summary.opengauss.org;
     charset utf-8;
 
 
@@ -85,8 +85,6 @@ http {
     }
 
     location / {
-      rewrite ^/zh/2023/agreement_ch.html                      /agreement_ch.html                            permanent;
-
       limit_req zone=ratelimit burst=5 nodelay;
       proxy_set_header X-Forwarded-For $http_x_real_ip;
       proxy_set_header Host $host;
