fix: 格式化nginx配置

--- a/deploy/mindspore/nginx.conf
+++ b/deploy/mindspore/nginx.conf
@@ -57,7 +57,6 @@ http {
     server_name summary.mindspore.cn;
     charset utf-8;
 
-
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Frame-Options DENY;
     add_header X-Content-Type-Options nosniff;
@@ -66,16 +65,11 @@ http {
     add_header Cache-Control "no-cache,no-store,must-revalidate";
     add_header Pragma no-cache;
     add_header Expires 0;
-    add_header Referrer-Policy "no-referrer";
 
     limit_conn limitperip 10;
     resolver_timeout 5s;
 
-    if ($request_method = 'OPTIONS') {
-      return 401;
-    }
-
-    if ($request_method !~ ^(GET|HEAD|POST)$) {
+    if ($request_method !~ ^(GET|HEAD|POST|PUT|DELETE)$) {
       return 444;
     }
 
@@ -89,7 +83,6 @@ http {
       proxy_set_header X-Forwarded-For $http_x_real_ip;
       proxy_set_header Host $host;
 
-
       location /assets {
         add_header X-XSS-Protection "1; mode=block";
         add_header X-Frame-Options DENY;
@@ -97,7 +90,6 @@ http {
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains";
         add_header Content-Security-Policy "script-src 'self' 'unsafe-inline' 'unsafe-eval' ; object-src 'none'; frame-src 'none'";
         add_header Cache-Control "public,max-age=1209600";
-        add_header Referrer-Policy "no-referrer";
       }
 
       location / {
@@ -108,7 +100,7 @@ http {
       index index.html;
     }
 
-    location /query/ {
+    location ^~ /query/ {
       proxy_set_header X-Forwarded-For $http_x_real_ip;
       add_header X-XSS-Protection "1; mode=block";
       add_header X-Frame-Options DENY;
@@ -117,16 +109,13 @@ http {
       add_header Cache-Control "no-cache,no-store,must-revalidate";
       add_header Pragma no-cache;
       add_header Expires 0;
-      add_header Referrer-Policy "no-referrer";
 
       proxy_pass https://dsapi.osinfra.cn/query/;
     }
 
-
     error_page 401 402 403 405 406 407 413 414 /error.html;
     error_page 404 /404.html;
     error_page 500 501 502 503 504 505 /error.html;
-
 
     location = /404.html {
       root /usr/share/nginx/www;
