--- a/deploy/euler/nginx.conf
+++ b/deploy/euler/nginx.conf
@@ -57,7 +57,6 @@ http {
     server_name summary.openeuler.org;
     charset utf-8;
 
-
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Frame-Options DENY;
     add_header X-Content-Type-Options nosniff;
@@ -66,15 +65,11 @@ http {
     add_header Cache-Control "no-cache,no-store,must-revalidate";
     add_header Pragma no-cache;
     add_header Expires 0;
-    add_header Referrer-Policy "no-referrer";
 
     limit_conn limitperip 10;
     resolver_timeout 5s;
 
-    if ($request_method = 'OPTIONS') {
-      return 401;
-    }
-    if ($request_method !~ ^(GET|HEAD|POST)$) {
+    if ($request_method !~ ^(GET|HEAD|POST|PUT|DELETE)$) {
       return 444;
     }
 
@@ -84,13 +79,12 @@ http {
     }
 
     location / {
-      rewrite ^/zh/2023/agreement_ch.html                      /agreement_ch.html                            permanent;
-      rewrite ^/en/2023/agreement_ch.html                      /agreement_en.html                            permanent;
+      rewrite ^/zh/2023/agreement_ch.html /agreement_ch.html permanent;
+      rewrite ^/en/2023/agreement_ch.html /agreement_en.html permanent;
 
       limit_req zone=ratelimit burst=5 nodelay;
       proxy_set_header X-Forwarded-For $http_x_real_ip;
       proxy_set_header Host $host;
-
 
       location /assets {
         add_header X-XSS-Protection "1; mode=block";
@@ -99,7 +93,6 @@ http {
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains";
         add_header Content-Security-Policy "script-src 'self' 'unsafe-inline' 'unsafe-eval' ; object-src 'none'; frame-src 'none'";
         add_header Cache-Control "public,max-age=1209600";
-        add_header Referrer-Policy "no-referrer";
       }
 
       location / {
@@ -110,7 +103,7 @@ http {
       index index.html;
     }
 
-    location /query/ {
+    location ^~ /query/ {
       proxy_set_header X-Forwarded-For $http_x_real_ip;
       add_header X-XSS-Protection "1; mode=block";
       add_header X-Frame-Options DENY;
@@ -119,11 +112,9 @@ http {
       add_header Cache-Control "no-cache,no-store,must-revalidate";
       add_header Pragma no-cache;
       add_header Expires 0;
-      add_header Referrer-Policy "no-referrer";
 
       proxy_pass https://dsapi.osinfra.cn/query/;
     }
-
 
     error_page 401 402 403 405 406 407 413 414 /error.html;
     error_page 404 /404.html;
