--- a/deploy/gauss/nginx.conf
+++ b/deploy/gauss/nginx.conf
@@ -57,7 +57,6 @@ http {
     server_name summary.opengauss.org;
     charset utf-8;
 
-
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Frame-Options DENY;
     add_header X-Content-Type-Options nosniff;
@@ -66,7 +65,6 @@ http {
     add_header Cache-Control "no-cache,no-store,must-revalidate";
     add_header Pragma no-cache;
     add_header Expires 0;
-    add_header Referrer-Policy "no-referrer";
 
     limit_conn limitperip 10;
     resolver_timeout 5s;
@@ -89,7 +87,6 @@ http {
       proxy_set_header X-Forwarded-For $http_x_real_ip;
       proxy_set_header Host $host;
 
-
       location /assets {
         add_header X-XSS-Protection "1; mode=block";
         add_header X-Frame-Options DENY;
@@ -97,7 +94,6 @@ http {
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains";
         add_header Content-Security-Policy "script-src 'self' 'unsafe-inline' 'unsafe-eval' ; object-src 'none'; frame-src 'none'";
         add_header Cache-Control "public,max-age=1209600";
-        add_header Referrer-Policy "no-referrer";
       }
 
       location / {
@@ -108,7 +104,7 @@ http {
       index index.html;
     }
 
-    location /query/ {
+    location ^~ /query/ {
       proxy_set_header X-Forwarded-For $http_x_real_ip;
       add_header X-XSS-Protection "1; mode=block";
       add_header X-Frame-Options DENY;
@@ -117,7 +113,6 @@ http {
       add_header Cache-Control "no-cache,no-store,must-revalidate";
       add_header Pragma no-cache;
       add_header Expires 0;
-      add_header Referrer-Policy "no-referrer";
 
       proxy_pass https://dsapi.osinfra.cn/query/;
     }
